ParseInt, ParseDouble, and ParseFloat replacements. Removal of NFE's where they are no longer needed. IDEA Clean ups.